// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/login/LoginController should match snapshot 1`] = `
<div>
  <Connect(AnnouncementBarController) />
  <div
    className="col-sm-12"
    id="login_section"
  >
    <div
      className="signup-team__container undefined"
    >
      <div
        className="signup__markdown"
      />
      <img
        alt="signup team logo"
        className="signup-team-logo"
        src={null}
      />
      <div
        className="signup__content"
      >
        <SiteNameAndDescription
          customDescriptionText=""
          siteName=""
        />
        <div>
          <FormError
            error={
              <FormattedMessage
                defaultMessage="No sign-in methods are enabled. Please contact your System Administrator."
                id="login.noMethods"
              />
            }
            errors={Array []}
            key="noMethods"
            margin={true}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/login/LoginController should match snapshot when expired 1`] = `
<div>
  <Connect(AnnouncementBarController) />
  <div
    className="col-sm-12"
    id="login_section"
  >
    <div
      className="signup-team__container undefined"
    >
      <div
        className="signup__markdown"
      />
      <img
        alt="signup team logo"
        className="signup-team-logo"
        src={null}
      />
      <div
        className="signup__content"
      >
        <SiteNameAndDescription
          customDescriptionText=""
          siteName=""
        />
        <div>
          <div
            className="alert alert-warning"
          >
            <WarningIcon
              additionalClassName={null}
            />
             
            <FormattedMessage
              defaultMessage="Your session has expired. Please log in again."
              id="login.session_expired"
            />
             
            <Link
              className="btn-close"
              onClick={[Function]}
              to="/login"
            >
              <span>
                ×
              </span>
            </Link>
          </div>
          <FormError
            error={
              <FormattedMessage
                defaultMessage="No sign-in methods are enabled. Please contact your System Administrator."
                id="login.noMethods"
              />
            }
            errors={Array []}
            key="noMethods"
            margin={true}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/login/LoginController should match snapshot when initializing 1`] = `
<LoadingScreen
  position="relative"
  style={Object {}}
/>
`;

exports[`components/login/LoginController should show session expiry notification 1`] = `
<div>
  <Connect(AnnouncementBarController) />
  <div
    className="col-sm-12"
    id="login_section"
  >
    <div
      className="signup-team__container undefined"
    >
      <div
        className="signup__markdown"
      />
      <img
        alt="signup team logo"
        className="signup-team-logo"
        src={null}
      />
      <div
        className="signup__content"
      >
        <SiteNameAndDescription
          customDescriptionText=""
          siteName=""
        />
        <div>
          <div
            className="alert alert-warning"
          >
            <WarningIcon
              additionalClassName={null}
            />
             
            <FormattedMessage
              defaultMessage="Your session has expired. Please log in again."
              id="login.session_expired"
            />
             
            <Link
              className="btn-close"
              onClick={[Function]}
              to="/login"
            >
              <span>
                ×
              </span>
            </Link>
          </div>
          <FormError
            error={
              <FormattedMessage
                defaultMessage="No sign-in methods are enabled. Please contact your System Administrator."
                id="login.noMethods"
              />
            }
            errors={Array []}
            key="noMethods"
            margin={true}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/login/LoginController should suppress session expiry notification on sign in change 1`] = `
<div>
  <Connect(AnnouncementBarController) />
  <div
    className="col-sm-12"
    id="login_section"
  >
    <div
      className="signup-team__container undefined"
    >
      <div
        className="signup__markdown"
      />
      <img
        alt="signup team logo"
        className="signup-team-logo"
        src={null}
      />
      <div
        className="signup__content"
      >
        <SiteNameAndDescription
          customDescriptionText=""
          siteName=""
        />
        <div>
          <div
            className="alert alert-success"
          >
            <SuccessIcon />
            <FormattedMessage
              defaultMessage=" Sign-in method changed successfully"
              id="login.changed"
            />
          </div>
          <FormError
            error={
              <FormattedMessage
                defaultMessage="No sign-in methods are enabled. Please contact your System Administrator."
                id="login.noMethods"
              />
            }
            errors={Array []}
            key="noMethods"
            margin={true}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
